src/objects/Order__c.object
<CustomObject>
    <description>CORE adopted from ICOM - Object to track Orders - integration with Bookmaster</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CancelAfterDate__c</fullName>
        <description>From Canonical XSD</description>
        <label>Cancel After Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliverToAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle: Deliver to Customer Location</description>
        <label>End User/Deliver To Address</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Selected Deliver To Address is not an active address for the selected Account</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Account_Addresses__c.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Account_Addresses__c.ERP_Address_Status__c</field>
                <operation>equals</operation>
                <value>ACTIVE</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Pearson Integration, System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Addresses__c</referenceTo>
        <relationshipName>Orders_Deliver_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliverToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle requirements</description>
        <label>End User/Deliver To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <description>From Canonical XSD: Total Discount</description>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DoNotShipBeforeDate__c</fullName>
        <description>From Canonical XSD</description>
        <label>Do Not Ship Before Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoNotSplit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From Canonical XSD</description>
        <label>Do Not Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Order_Number__c</fullName>
        <externalId>true</externalId>
        <label>External Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancialAccountNumber__c</fullName>
        <formula>InvoiceToAddress__r.ERP_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GratisOrderCOGSAccount__c</fullName>
        <description>From Oracle requirements: GRATIS_COGS = Used to charge &quot;sample&quot; orders to a specific cost center. When populated, the Center.ER entered into this field is used in the COGS account generation.</description>
        <label>Gratis Order COGS Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_18_character__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id (18-character)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Products__c</fullName>
        <label>Inactive Products</label>
        <summaryFilterItems>
            <field>OrderLineItem__c.Is_Active_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderLineItem__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Instruction_Alert__c</fullName>
        <description>Visual prompt if Order Instructions are noted for the related Account</description>
        <formula>IF( Order_Instructions__c = NULL , IMAGE(&quot;/img/msg_icons/confirm32.png&quot;,&quot;Green&quot;), IMAGE(&quot;/img/msg_icons/warning32.png&quot;,&quot;Orange&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instruction Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNotes__c</fullName>
        <description>From Oracle requirements</description>
        <label>Invoice Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceToAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle Stored Procedure Input Fields: Invoice to Customer Location</description>
        <label>Invoice to Address</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Selected Invoice To Address is not an active address for the selected Account</errorMessage>
            <filterItems>
                <field>Account_Addresses__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Account_Addresses__c.ERP_Address_Status__c</field>
                <operation>equals</operation>
                <value>ACTIVE</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Pearson Integration, System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Addresses__c</referenceTo>
        <relationshipName>Orders_Invoice_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle requirements</description>
        <label>Invoice to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_To_Address_Account__c</fullName>
        <formula>InvoiceToAddress__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice To Address Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_To_Address_State__c</fullName>
        <formula>InvoiceToAddress__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice To Address State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineItemCount__c</fullName>
        <label>Line Item Count</label>
        <summaryForeignKey>OrderLineItem__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manual_Order_Fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>HE Only -  The Pearson Customer Experience Representative will check the “Manual Order Fulfilled” box on the order once it has been fully completed/delivered according to the ERP (Bookmaster) system.</inlineHelpText>
        <label>Manual Order Fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderContactInfo__c</fullName>
        <description>From Oracle requirements: Free form text capturing the ordered by contact name, phone, email, etc. (Used when there is no requirement to reference contacts stored in Oracle ERP)</description>
        <label>Order Contact Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <description>From Canonical XSD: Unique internal order number</description>
        <label>Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>From Canonical XSD: ERP Order Number; some ERPs allow order number to be externally supplied.</description>
        <label>ERP Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderSource__c</fullName>
        <description>From Canonical XSD: Code indicating source of order eg web, edi, phone, fax</description>
        <label>Order Source</label>
        <picklist>
            <picklistValues>
                <fullName>web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>edi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrderSubTotal__c</fullName>
        <description>From Canonical XSD: Order Total before shipping, discount or tax</description>
        <label>Order Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderType__c</fullName>
        <description>From Canonical XSD: Order type (enumeration)</description>
        <label>Order Type</label>
        <picklist>
            <controllingField>TargetSystem__c</controllingField>
            <picklistValues>
                <fullName>Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Instructions__c</fullName>
        <formula>Account__r.Order_Instructions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_Item_Rollup__c</fullName>
        <description>Counts Line Items that don&apos;t have a blank Ordered Item field.  If this does not match the Line Item Rollup, validation fails.</description>
        <inlineHelpText>Counts Line Items that don&apos;t have a blank Ordered Item field.  If this does not match the Line Item Rollup, validation fails.</inlineHelpText>
        <label>Ordered Item Rollup</label>
        <summaryFilterItems>
            <field>OrderLineItem__c.Ordered_Item__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OrderLineItem__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OverrideDeliverToAddressLine1__c</fullName>
        <label>Override DeliverTo Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideDeliverToAddressLine2__c</fullName>
        <label>Override DeliverTo Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideDeliverToAddressLine3__c</fullName>
        <label>Override DeliverTo Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideDeliverToAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Deliver To Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OverrideDeliverToCity__c</fullName>
        <label>Override DeliverTo City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideDeliverToCountry__c</fullName>
        <label>Override DeliverTo Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideDeliverToState__c</fullName>
        <label>Override Deliver To State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideDeliverToZipCode__c</fullName>
        <label>Override Deliver To Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <description>From Canonical XSD: Customer-supplied order number</description>
        <label>Purchase Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackingInstructions__c</fullName>
        <description>From Oracle requirements</description>
        <label>Packing Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Delivery_Date__c</fullName>
        <label>Preferred Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchaseDate__c</fullName>
        <description>From Canonical XSD: Purchasing Date of an Order</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RushFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From Canonical XSD: Status for Rush processing of Order</description>
        <label>Rush Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesChannel__c</fullName>
        <description>From Oracle requirements</description>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>NCSLearn Eastern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCSLearn Western Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesperson_Name__c</fullName>
        <description>From Oracle requirements: SALESREP_NAME = If Salesperson Username is not passed, then stored procedure will lookup salesperson in Oracle using Last Name, First Name</description>
        <formula>Salesperson__r.FirstName &amp; &quot; &quot; &amp;  Salesperson__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesperson Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle requirements</description>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipConfirmationEmail__c</fullName>
        <description>From Oracle requirements: SHIP_CONFIRM_EMAIL = Enter an email address to send shipment confirmation emails.</description>
        <label>Ship Confirmation Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ShipToAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle Stored Procedure Input Fields: Ship To Customer Location</description>
        <label>Ship to Address</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Selected Ship To Address is not an active address for the selected Account</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Account_Addresses__c.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Account_Addresses__c.ERP_Address_Status__c</field>
                <operation>equals</operation>
                <value>ACTIVE</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Pearson Integration, System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Addresses__c</referenceTo>
        <relationshipName>Orders_Ship_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle requirements</description>
        <label>Ship to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Account__c</fullName>
        <formula>ShipToAddress__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentPriority__c</fullName>
        <description>From Oracle Requirements</description>
        <label>Shipment Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Priority</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShippingAmount__c</fullName>
        <description>From Canonical XSD</description>
        <label>Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShippingInstructions__c</fullName>
        <description>From Oracle Requirements</description>
        <label>Shipping Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingMethod__c</fullName>
        <description>From Canonical XSD: Shipping method. Typically a code indicating a combination of Carrier and Service Level e.g. Fed Ex Ground</description>
        <label>Shipping Method</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Best Method of Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overnight Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia Post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SoldToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle Requirements</description>
        <label>Sold To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Orders_Sold_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Order_Handling__c</fullName>
        <description>Includes: 
Non-standard billing terms  
Special invoice language (match customer PO)
Commit orders 
Supporting documentation with invoice 
Expense billing 
Future product delivery 
Credit card payment</description>
        <inlineHelpText>Includes: 
Non-standard billing terms  
Special invoice language (match customer PO)
Commit orders 
Supporting documentation with invoice 
Expense billing 
Future product delivery 
Credit card payment
Promotion codes</inlineHelpText>
        <label>Special Order Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StatusReason__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>&apos;New&apos; is the status for order that have not been completed yet
&apos;Approved&apos; is the status you should select when you want to trigger the sending of the order to Bookmaster</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StoreId__c</fullName>
        <description>From Canonical XSD: StoreFrontGroup ID of an Order</description>
        <label>Store Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierId__c</fullName>
        <label>Supplier Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetSystem__c</fullName>
        <label>Target System</label>
        <picklist>
            <picklistValues>
                <fullName>K12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TaxExemptId__c</fullName>
        <description>From Canonical XSD: Tax exemption id used in this transaction. This is associated with a specific person/org, but can only be one for the whole order.</description>
        <label>Tax Exempt Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalSalesAmount__c</fullName>
        <description>From Canonical XSD: Total sales amount including Sub total sales amount and Tax amount of an order</description>
        <label>Total Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTaxAmount__c</fullName>
        <description>From Canonical XSD: Total of all taxes of all types</description>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransactionNotificationEmail__c</fullName>
        <description>From Oracle requirements: INVOICE_EMAIL = Enter an email address to send a copy of the invoice electronically</description>
        <label>Transaction Notification Email</label>
        <type>Email</type>
    </fields>
    <label>Order</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>Approved_Order</fullName>
        <active>true</active>
        <label>Approved Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Order</fullName>
        <active>true</active>
        <label>Order</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Order_Approval_Only_If_Active_Products</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
AND(
LineItemCount__c==0, 
ISPICKVAL(Status__c,&apos;Approved&apos;)
),
AND( 
Inactive_Products__c &gt; 0, 
ISPICKVAL(Status__c,&apos;Approved&apos;) 
) 
)</errorConditionFormula>
        <errorMessage>Please ensure an active product has been added to the order, and all inactive products removed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Approval_only_if_BookmasterAccount</fullName>
        <active>true</active>
        <description>CORE - The order can only be approved if the Account is in Bookmaster.</description>
        <errorConditionFormula>IF(
      AND(
            ISPICKVAL(TargetSystem__c,&apos;HED&apos;),
            ISPICKVAL(OrderType__c,&apos;Sample&apos;),
            OR(
                  Account__r.RecordType.Name = &apos;Higher Education&apos;,
                  Account__r.RecordType.Name = &apos;Non Integrated&apos;
            )
      ),
      FALSE,
      AND(
            OR (ISBLANK(Account__r.External_Account_Number__c), Account__r.Account_Status__c != &apos;A&apos;),
            ISPICKVAL(Status__c,&apos;Approved&apos;),
            OR(
                  Account__r.BillingCountry == &apos;Australia&apos;,
                  Account__r.BillingCountry == &apos;New Zealand&apos;
            )
      )
)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>The Account must have a Bookmaster Account Number and be Active to have an Approved Order. Please ensure the Account is in Bookmaster and the Account Status is A.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_NO_Approval_HE_Non_Samples</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
ISPICKVAL(Status__c, &apos;Approved&apos;) , 
ISPICKVAL (TargetSystem__c, &apos;HED&apos;), 
ISPICKVAL (OrderType__c, &apos;Normal Sale&apos;)
)</errorConditionFormula>
        <errorMessage>An HE Normal Sale Order cannot be set to &apos;Approved&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_PO_Number_To_Long</fullName>
        <active>true</active>
        <description>Order PO Number can not exceed 30 chars</description>
        <errorConditionFormula>AND(NOT(ISBLANK( PONumber__c )), LEN( PONumber__c ) &gt; 30)</errorConditionFormula>
        <errorDisplayField>PONumber__c</errorDisplayField>
        <errorMessage>The Purchase Order Number can not exceed 30 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Address_Override_Fields</fullName>
        <active>true</active>
        <description>Ensure that override Address Line 1, City, State, Country and Zip are populated if Address Override = true</description>
        <errorConditionFormula>AND(
	OverrideDeliverToAddress__c,
	OR(
		ISBLANK(OverrideDeliverToAddressLine1__c),
		ISBLANK(OverrideDeliverToCity__c),
		ISBLANK(OverrideDeliverToCountry__c),
		ISBLANK(OverrideDeliverToState__c),
		ISBLANK(OverrideDeliverToZipCode__c)
	)
)</errorConditionFormula>
        <errorMessage>If choosing to override the deliver to address, please populate the Override Deliver Address Line 1, Override Deliver to City, Override Deliver to Country, Override Deliver to State and Override Deliver to Zip Code fields.</errorMessage>
    </validationRules>
</CustomObject>